Fix social link vertical alignment

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -357,7 +357,7 @@ footer .footer-below {
     border-radius: 100%;
     text-align: center;
     font-size: 20px;
-    line-height: 48px;
+    line-height: 45px;
 }
 
 .btn:focus,
